# gaddisa

./: .env  .gitignore  .htaccess  CLAUDE.md  DATABASE_SETUP.md  DEPLOYMENT.md  LANGUAGE_DEBUG_SETUP.md  LANGUAGE_SUPPORT.md  README.md  UPLOAD_TO_CPANEL.md  agencies_addis_ababa.json  bot_runner.py  create_user_profile.py  db.sqlite3  debug_bot.py  debug_language_preferences.py  debug_output.txt  debug_webapp.py  diagnose_database_issue.py  fix_language_error_cpanel.py  language_debug_logging.py  man_migrations.py  manage.py  nohup.out  passenger_wsgi.py  populate_database.py  requirements.txt  run_bot_with_language.bat  run_cpanel_bot.py  run_emergency_bot.bat  run_populate.bat  run_populate.sh  run_with_direct_ip.bat  set_telegram_webhook.py  set_webhook.py  simple_add_data.py  start_bot.sh  stop_bot.sh  test_django.py  test_final.py  (+7 more)
emergency_bot/: asgi.py  env.example  manage.py  pyproject.toml  settings.py  urls.py  wsgi.py
emergency_bot/accounts/: admin.py  middleware.py  models.py  models_additions.py  urls.py  views.py
emergency_bot/agencies/: admin.py  models.py  serializers.py  urls.py  views.py
emergency_bot/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
emergency_bot/emergency_bot/: asgi.py  celery.py  urls.py  wsgi.py
emergency_bot/frontend/: __init__.py  urls.py  views.py
emergency_bot/notifications/: consumers.py  models.py  routing.py  tasks.py  urls.py  views.py
emergency_bot/reports/: admin.py  models.py  serializers.py  urls.py  views.py
emergency_bot/requirements/: dev.txt  prod.txt
emergency_bot/scripts/: run_bot.py  (+3 more)
(+315 files in other folders)
